[gd_scene load_steps=2 format=3 uid="uid://b2q8cghbx5rdy"]

[ext_resource type="Script" path="res://Scripts/UI/ResearchNotification.gd" id="1_research_notification"]

[node name="ResearchNotification" type="Control"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 20.0
offset_bottom = 120.0
grow_horizontal = 0
script = ExtResource("1_research_notification")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.3, 0.9)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Título de Notificación"
theme_override_font_sizes/font_size = 14

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Mensaje de la notificación de investigación."
theme_override_font_sizes/font_size = 12
autowrap_mode = 2
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Cerrar"
custom_min_size = Vector2(0, 25)